Even more changes for IntelliJ inspections (sorry)